pages/services/beta-storage/0.4.0-beta/cli-references/dcos-storage-volume/dcos-storage-volume-list/index.md
---
layout: layout.pug
navigationTitle: dcos storage volume list
title: dcos storage volume list
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
origin: github.com/mesosphere/dcos-storage/cli/pkg/cmd/cmd_volume_list.go
---
## dcos storage volume list

List volumes.

### Synopsis

Arguments:

    <volumes>   A space-separated list of volumes to list. This argument is
                optional. If it is not provided all volumes will be listed.

List volumes.

```bash
dcos storage volume list [<volumes>] [flags]
```

### Examples

1. Create two volumes and list them:

```bash
# First, we create two volumes to list.
# Create a SSD-backed volume from a 'fast' volume profile.
$ dcos storage volume create my-volume-1 100G fast

# Create a volume backed by HDDs from an 'archive' volume profile.
$ dcos storage volume create my-archive-1 200G archive

# Now, we list the volumes.
$ dcos storage volume list
NODE                                     NAME          SIZE     STATUS
c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1  my-volume-1   100000M  ONLINE
c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2  my-archive-1  200000M  ONLINE

$ dcos storage volume list --json
{
    "volumes": [
        {
            "name": "my-volume-1",
            "capacity-mb": 100000,
            "profile": "fast",
            "status": {
                "state": "ONLINE",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        },
        {
            "name": "my-archive-1",
            "capacity-mb": 200000,
            "profile": "archive",
            "status": {
                "state": "ONLINE",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}

# List only the my-volume-1 volume.
$ dcos storage volume list my-volume-1 --json
{
    "volumes": [
        {
            "name": "my-volume-1",
            "capacity-mb": 100000,
            "profile": "fast",
            "status": {
                "state": "ONLINE",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}
```

### Options

```bash
  --all           Display removed volumes.
  --json          Display the list of volumes in json format.
  --node string   Only list volumes created on node.
```

### Options inherited from parent commands

```bash
  -h, --help               Help for this command.
  --timeout duration   Override the default request timeout. (default 55s)
```

### SEE ALSO

* [dcos storage volume](../)	 - Manage volumes.

